--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFalsePositives.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFalsePositives.xib
@@ -11,99 +11,73 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQFalsePositivesVC" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
-                <outlet property="addPhotoView" destination="WCy-fb-pG9" id="OHA-DB-PtY"/>
-                <outlet property="editButton" destination="0Fg-Xg-9P8" id="Xfk-iZ-tLb"/>
                 <outlet property="handlePerson" destination="0fB-Ds-Xcc" id="FSz-7K-v8d"/>
                 <outlet property="handleTime" destination="s8H-et-F4C" id="lw2-Hs-Frb"/>
-                <outlet property="proveImageV" destination="Drc-20-u7W" id="6nC-v9-OOY"/>
+                <outlet property="imagesView" destination="Cg4-oi-Snk" id="tDf-7p-8ie"/>
+                <outlet property="view" destination="ae1-PS-z08" id="pSu-hF-Z7m"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ae1-PS-z08">
-            <rect key="frame" x="0.0" y="0.0" width="386" height="581"/>
+            <rect key="frame" x="0.0" y="0.0" width="390" height="560"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="处理人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brw-fb-0jk">
-                    <rect key="frame" x="57" y="40" width="52" height="21"/>
+                    <rect key="frame" x="59" y="80" width="52" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="王宝强" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0fB-Ds-Xcc">
-                    <rect key="frame" x="144" y="35.5" width="58" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="王宝强" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0fB-Ds-Xcc">
+                    <rect key="frame" x="146" y="75.5" width="58" height="30"/>
                     <color key="textColor" white="0.48999999999999999" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="处理时间" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4T2-AE-Bjj">
-                    <rect key="frame" x="39" y="91" width="70" height="21"/>
+                    <rect key="frame" x="41" y="131" width="70" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2017-04-16" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s8H-et-F4C">
-                    <rect key="frame" x="144" y="87" width="89" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2017-04-16" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s8H-et-F4C">
+                    <rect key="frame" x="146" y="127" width="89" height="30"/>
                     <color key="textColor" white="0.48999999999999999" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="证明图片" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cDt-cB-muL">
-                    <rect key="frame" x="39" y="142" width="70" height="21"/>
+                    <rect key="frame" x="41" y="182" width="70" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WCy-fb-pG9" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="296" y="173" width="90" height="100"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cg4-oi-Snk" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                    <rect key="frame" x="41" y="213" width="339" height="80"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="90" id="3bI-09-L8Q"/>
-                        <constraint firstAttribute="height" constant="100" id="Uyi-sc-vzm"/>
+                        <constraint firstAttribute="height" constant="80" id="FsL-LH-gOn"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Fg-Xg-9P8">
-                    <rect key="frame" x="326" y="283" width="50" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="o5J-Wd-fY8"/>
-                        <constraint firstAttribute="width" constant="50" id="xcK-tb-6aN"/>
-                    </constraints>
-                    <state key="normal" title="编辑"/>
-                    <connections>
-                        <action selector="editButtonClick:" destination="-1" eventType="touchUpInside" id="vri-C1-Ktk"/>
-                    </connections>
-                </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Drc-20-u7W">
-                    <rect key="frame" x="176" y="173" width="90" height="100"/>
-                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Drc-20-u7W" firstAttribute="centerY" secondItem="WCy-fb-pG9" secondAttribute="centerY" id="59T-4S-pg4"/>
                 <constraint firstItem="s8H-et-F4C" firstAttribute="leading" secondItem="0fB-Ds-Xcc" secondAttribute="leading" id="6jQ-QH-cKD"/>
-                <constraint firstItem="WCy-fb-pG9" firstAttribute="leading" secondItem="Drc-20-u7W" secondAttribute="trailing" constant="30" id="7TQ-bY-jov"/>
                 <constraint firstItem="4T2-AE-Bjj" firstAttribute="top" secondItem="brw-fb-0jk" secondAttribute="bottom" constant="30" id="JeX-Zj-8QU"/>
                 <constraint firstItem="s8H-et-F4C" firstAttribute="centerY" secondItem="4T2-AE-Bjj" secondAttribute="centerY" id="Kah-C0-Rtz"/>
                 <constraint firstItem="brw-fb-0jk" firstAttribute="centerX" secondItem="ae1-PS-z08" secondAttribute="centerX" constant="-110" id="LNQ-yj-L3q"/>
                 <constraint firstItem="0fB-Ds-Xcc" firstAttribute="centerX" secondItem="ae1-PS-z08" secondAttribute="centerX" constant="-20" id="LWB-Pm-qau"/>
-                <constraint firstAttribute="trailing" secondItem="WCy-fb-pG9" secondAttribute="trailing" id="MJu-oS-N7d"/>
-                <constraint firstItem="Drc-20-u7W" firstAttribute="width" secondItem="WCy-fb-pG9" secondAttribute="width" id="MOU-5Z-6w6"/>
-                <constraint firstAttribute="trailing" secondItem="0Fg-Xg-9P8" secondAttribute="trailing" constant="10" id="Nf9-Ho-0iW"/>
+                <constraint firstItem="Cg4-oi-Snk" firstAttribute="top" secondItem="cDt-cB-muL" secondAttribute="bottom" constant="10" id="NIy-li-ebd"/>
                 <constraint firstItem="0fB-Ds-Xcc" firstAttribute="centerY" secondItem="brw-fb-0jk" secondAttribute="centerY" id="NlO-h1-ynf"/>
                 <constraint firstItem="cDt-cB-muL" firstAttribute="top" secondItem="4T2-AE-Bjj" secondAttribute="bottom" constant="30" id="aKT-TV-7Vb"/>
-                <constraint firstItem="brw-fb-0jk" firstAttribute="top" secondItem="ae1-PS-z08" secondAttribute="top" constant="40" id="beK-Op-ulD"/>
+                <constraint firstItem="brw-fb-0jk" firstAttribute="top" secondItem="ae1-PS-z08" secondAttribute="top" constant="80" id="beK-Op-ulD"/>
                 <constraint firstItem="cDt-cB-muL" firstAttribute="trailing" secondItem="4T2-AE-Bjj" secondAttribute="trailing" id="bf8-TE-0Pk"/>
-                <constraint firstItem="Drc-20-u7W" firstAttribute="height" secondItem="WCy-fb-pG9" secondAttribute="height" id="jwe-N0-5iT"/>
-                <constraint firstItem="0Fg-Xg-9P8" firstAttribute="top" secondItem="WCy-fb-pG9" secondAttribute="bottom" constant="10" id="nyD-SE-A1e"/>
+                <constraint firstItem="Cg4-oi-Snk" firstAttribute="leading" secondItem="cDt-cB-muL" secondAttribute="leading" id="d8c-dX-Wya"/>
+                <constraint firstAttribute="trailing" secondItem="Cg4-oi-Snk" secondAttribute="trailing" constant="10" id="paj-dk-lxm"/>
                 <constraint firstItem="4T2-AE-Bjj" firstAttribute="trailing" secondItem="brw-fb-0jk" secondAttribute="trailing" id="r9N-q3-aNd"/>
-                <constraint firstItem="WCy-fb-pG9" firstAttribute="top" secondItem="cDt-cB-muL" secondAttribute="bottom" constant="10" id="yK9-r6-8nT"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-130" y="-27.5"/>
+            <point key="canvasLocation" x="-419" y="-88"/>
         </view>
-        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Qmh-0k-Doq">
-            <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <state key="normal" title="Button"/>
-        </button>
     </objects>
 </document>
