--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQResolved.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQResolved.xib
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QxI-6h-p81">
-                    <rect key="frame" x="60" y="65" width="65" height="30"/>
+                    <rect key="frame" x="35" y="65" width="65" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="8Ft-pa-B3f"/>
                         <constraint firstAttribute="width" constant="65" id="dPU-Jd-W48"/>
@@ -26,7 +26,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Unf-Td-gJ7">
-                    <rect key="frame" x="135" y="57.5" width="45" height="45"/>
+                    <rect key="frame" x="110" y="57.5" width="45" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="W1f-wJ-7jO"/>
                         <constraint firstAttribute="width" constant="45" id="zn8-nc-OLg"/>
@@ -43,13 +43,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="原因" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WQV-cP-Tqa">
-                    <rect key="frame" x="84" y="195" width="41" height="24"/>
+                    <rect key="frame" x="59" y="195" width="41" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDl-g2-gLm">
-                    <rect key="frame" x="45" y="249" width="80" height="30"/>
+                    <rect key="frame" x="20" y="249" width="80" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="80" id="Igk-Sr-EVn"/>
                         <constraint firstAttribute="height" constant="30" id="cAh-MC-hDA"/>
@@ -65,8 +65,8 @@
                         <constraint firstAttribute="height" constant="100" id="Vkj-vZ-AN5"/>
                     </constraints>
                 </view>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="添加一个" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tnq-30-tIa">
-                    <rect key="frame" x="185" y="65" width="78.5" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="添加一个" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tnq-30-tIa">
+                    <rect key="frame" x="160" y="65" width="78.5" height="30"/>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -78,7 +78,7 @@
                     </userDefinedRuntimeAttributes>
                 </textField>
                 <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYD-iw-Kmb">
-                    <rect key="frame" x="60" y="135" width="65" height="30"/>
+                    <rect key="frame" x="35" y="135" width="65" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="65" id="EOi-Sm-H9N"/>
                         <constraint firstAttribute="height" constant="30" id="dgr-n6-1LX"/>
@@ -88,7 +88,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJw-uH-cxD">
-                    <rect key="frame" x="135" y="127" width="45" height="45"/>
+                    <rect key="frame" x="110" y="127" width="45" height="45"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="45" id="Ccm-o1-Jcy"/>
                         <constraint firstAttribute="height" constant="45" id="ruC-14-ilv"/>
@@ -98,8 +98,8 @@
                         <action selector="addCooperateClick:" destination="dlO-eS-T8Z" eventType="touchUpInside" id="dTn-kw-fi0"/>
                     </connections>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="添加一个" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Mn-u0-Oad">
-                    <rect key="frame" x="185" y="135" width="78.5" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="添加一个" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Mn-u0-Oad">
+                    <rect key="frame" x="160" y="135" width="78.5" height="30"/>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -110,8 +110,8 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N95-Pb-Smp">
-                    <rect key="frame" x="140" y="192.5" width="25" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N95-Pb-Smp">
+                    <rect key="frame" x="115" y="192.5" width="255" height="30"/>
                     <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -139,6 +139,7 @@
                 <constraint firstItem="4qU-Jm-7rI" firstAttribute="top" secondItem="KDl-g2-gLm" secondAttribute="bottom" constant="10" id="1BX-ge-6MW"/>
                 <constraint firstItem="tlf-sG-1BG" firstAttribute="top" secondItem="4qU-Jm-7rI" secondAttribute="bottom" constant="10" id="1xL-Kh-PUK"/>
                 <constraint firstItem="fJw-uH-cxD" firstAttribute="centerY" secondItem="FYD-iw-Kmb" secondAttribute="centerY" id="2EQ-Hb-5Vh"/>
+                <constraint firstAttribute="trailing" secondItem="N95-Pb-Smp" secondAttribute="trailing" constant="5" id="2Uq-dl-WIs"/>
                 <constraint firstItem="KDl-g2-gLm" firstAttribute="trailing" secondItem="WQV-cP-Tqa" secondAttribute="trailing" id="5pb-wV-EHf"/>
                 <constraint firstItem="l2B-ef-fkD" firstAttribute="top" secondItem="dlO-eS-T8Z" secondAttribute="top" constant="20" id="7AF-XZ-gxO"/>
                 <constraint firstItem="WQV-cP-Tqa" firstAttribute="top" secondItem="QxI-6h-p81" secondAttribute="bottom" constant="100" id="7Le-I9-70U"/>
@@ -152,7 +153,7 @@
                 <constraint firstItem="Tnq-30-tIa" firstAttribute="leading" secondItem="Unf-Td-gJ7" secondAttribute="trailing" constant="5" id="TW4-Ho-i6Q"/>
                 <constraint firstItem="4qU-Jm-7rI" firstAttribute="leading" secondItem="dlO-eS-T8Z" secondAttribute="leading" id="YpN-Fa-pgi"/>
                 <constraint firstItem="N95-Pb-Smp" firstAttribute="centerY" secondItem="WQV-cP-Tqa" secondAttribute="centerY" id="ab9-F3-2m0"/>
-                <constraint firstItem="QxI-6h-p81" firstAttribute="centerX" secondItem="dlO-eS-T8Z" secondAttribute="centerX" constant="-95" id="eN4-2r-Lto"/>
+                <constraint firstItem="QxI-6h-p81" firstAttribute="centerX" secondItem="dlO-eS-T8Z" secondAttribute="centerX" constant="-120" id="eN4-2r-Lto"/>
                 <constraint firstItem="Unf-Td-gJ7" firstAttribute="leading" secondItem="QxI-6h-p81" secondAttribute="trailing" constant="10" id="lgl-FM-uh0"/>
                 <constraint firstItem="Tnq-30-tIa" firstAttribute="centerY" secondItem="QxI-6h-p81" secondAttribute="centerY" id="s6g-TK-MbF"/>
                 <constraint firstItem="0Mn-u0-Oad" firstAttribute="leading" secondItem="fJw-uH-cxD" secondAttribute="trailing" constant="5" id="shW-t3-KNW"/>
